Web socket basics with socket.io

--- a/index.html
+++ b/index.html
@@ -1,23 +1,11 @@
+<script src="/socket.io/socket.io.js"></script>
 
-<html>
-<head>
 <script>
-var connection = new WebSocket('ws://206.189.207.171:3000');
-connection.onmessage = function (event) { 
-document.getElementById('result0').value=event.data;
-connection.send("TEST");
+	
+var socket = io();
 
-};
+socket.on('message',function(data){
+document.write(data);
+})
+
 </script>
-</head>
-
-<body>
-<p>
-Result: <output type=text id="result0" value="" readonly> </output>
-</p>
-
-<input type=text 
-onchange="connection.send(this.value); ">
-</body>
-
-</html>
